# smallprogs

./: LICENSE  README.md
CoalesceAlloc/: merging.cpp
Compression/Entropy/: entropy.cpp  entropy_online.cpp
Compression/MoveToFront/: MoveToFrontTransform.cpp
MortonCurve/: CMakeLists.txt  README.md  first.cpp  morton.h
UnionOfManySets/: setin.cpp
alloc/: CMakeLists.txt  custom_pool.cpp  vector_string_alloc.cpp
alloc/howard/: shortvec.cpp
allocator/: AllocatorWithStats.h  StlAllocTest.cpp  chunk_copy.cpp  merging.cpp  stl_allocator.cpp
allocator/libinter/: article  malloc_hist.c  malloc_interposer.c  xopen_display.c
array/: has_equal_partition.cpp  maxsubarray_sum.cpp  quickselect.cpp
basic/: README.md  Solve.md  TEMPLATE_BACKTRACK  TEMPLATE_DIVIDE_AND_CONQUER  TEMPLATE_DYNPROG  TEMPLATE_GREEDY  TEMPLATE_RECURSION  TODO  combinatorics  diff_dynprog_greedy_divideconquer  lower_bound  recursive_to_iterative
basic/Backtrack/: backtracking.cpp
basic/array/: INTERSECT  README.md  a.out  array_overview.md  farthest_min.cpp  fenwick_count_smaller_greater.cpp  fibonacci_search.cpp  find_duplicates.cpp  find_next_greater_array.cpp  find_smaller_elem.cpp  generate_combinations.cpp  haar_transform.cpp  inversions.cpp  josephus.cpp  kth_smallest.cpp  longest_increasing_pairs.cpp  longest_increasing_subseq.cpp  max_len_chain_of_pair.cpp  max_span.cpp  max_val_contiguous_subseq.cpp  median_of_2_sorted_arrays.cpp  min_jumps.cpp  mo_algorithm.cpp  multiset.cpp  number_of_triples.cpp  range_min_query.md  rotated_array_find_elem.cpp  sequence_transformations.txt  smallest_int_not_sum_of_subset.cpp  smallest_missing_positive.cpp  tmp  tournament.cpp
basic/geometry/: convex_hull.cpp  find_pt_in_poly.cpp  intersect_2lines.cpp  intersect_lines_given_n.cpp  min_cost_poly_triangulation.cpp  rect_overlap.cpp
basic/graph/: CHORDAL_GRAPH  PROBLEMS  README.md  VOCAB  bellman_ford.cpp  bfs.cpp  detect_cycle  dynamic_algo  edge_cover.cpp  edge_disjoint_paths.cpp  floyd_warshall.cpp  graph.cpp  johnson_all_pairs.cpp  mst.cpp  paths_with_k_edges.cpp  shortest_path.cpp  shortest_path_djikstra.cpp  strongly_connected_components.cpp  topological_sort.cpp
basic/linkedlist/: ReverseAlternateNodes.cpp  add_two_numbers_as_linked_list.cpp  ptrptr.cpp  rev_k_nodes.cpp  reverse_groups_of_k.cpp
basic/math/: catalan.cpp  find_missing_numbers.cpp  gcd.cpp  horner.cpp  numberOfTriangles.cpp  poor_man_cdf.cpp  power_calc.cpp  pythagorean_triples.cpp  quotient_without_division.cpp  trailing_zeroes_in_factorial.cpp
basic/matrix/: README.md  SpiralPrint.cpp  find_elem_sorted_matrix.cpp  find_string_in_matrix.cpp  largest_area_matrix01.cpp  longest_path_constrained.cpp  matrix_row_with_max1.cpp  min_sum_submatrix.cpp  overview.md  print_diagonal.cpp
basic/misc/: angle_hour_min_clock.cpp  ant_cube.cpp  boolean_parenthizations.cpp  box_stacking_problem.cpp  camel_banana.cpp  channel_assignment.cpp  coins.cpp  coins2.cpp  eggs_thrown_from_floor.cpp  endianness.cpp  fancy.cpp  interval_intersect.cpp  k-server.cpp  knights_tour.cpp  lattice_paths.cpp  minjumps_matrix.cpp  phone_digits.cpp  profit_before_deadline.cpp  rodcutting.cpp  snake_ladder_works.cpp  walk_stairs.cpp
basic/sorting/: README.md  SORTING_ALGO  columnsort  dutch_national_flag.cpp  notes
basic/string/: PERMUTE  (+36 more)
cplus_tips/: collection_without_ptrs.cpp  deferred_func.cpp  function_wrapper.cpp  lazy_eval.cpp  map_of_memfunc.cpp  map_of_variadicfunc.cpp  nested_templates.cpp  return_by_rvalue.cpp  safe_integer.cpp  stack_print.cpp  true_false_template.cpp
cputest/: mutex_times.cpp  row_col_iter.cpp
crypto/: aes_cbc.c  crypt.c  crypt.h  pk.c  wrap.c
debugging/: print_stack_trace.c
defer_cleanup/: def.c
docker/: README.compose.md  README.docker.md  docker-compose.yml  docker.env
epoller/: CMakeLists.txt  EPoller.h  EventFD.h  nested_poller.cpp  poller.cpp
file_distributor/: FileDistributor.cpp  FileDistributor.h
folly_fiber/: FiberCheck.cpp
groupcommit/: GroupCommit.cpp  GroupCommit.h
htm/: htm1.cpp
indexed_queue/: .gitignore  CMakeLists.txt  IndexedQueue.cpp  IndexedQueue.h  IndexedQueueMain.cpp  intr.cpp
interview/: Solve.md
jit_cplus/json_match/: CMakeLists.txt  README.md  json_match.cpp  test.cpp  test.json
kalman_filter/: kalman.py
library_version/: find_version.cpp
lockfree/: CMakeLists.txt  ConditionVariableBenchmark.cpp  README.md  cas.cpp  conditional_cas.cpp  queue.h  queue_test.cpp  set.cpp  set.h  set_test.cpp  skiptest.cpp  spsc_queue.h  spsc_queue_test.cpp  stack.h  stack_test.cpp  test_main.cpp  thrset_test.cpp
math/: GaussCircleProblem.cpp
merge_sort_disk_blocks/: fmerge1.cpp  fmerge2.cpp  fmerge3.cpp  fmerge4.cpp  fmerge5.cpp  inplace_merge.cpp  list_merge.cpp  list_merge_ro.cpp  list_sort.cpp  merge.cpp  merge_stl.cpp  mergesort.tar  set.cpp
mpc/: car_driving_basic.py  car_driving_pid.py
networking/: infiniband.c  multicast.c
openfst/: CMakeLists.txt  build_fst.cpp  fst1.cpp
pagecachereader/: PageCacheReader.cpp  PageCacheReader.h  PageCacheReader2.cpp  PageCacheReader2.h
probability/: extend_random_range.cpp  fair_coin_using_biased_coin.cpp  generate_m_random_outofn.cpp
record_enter_exit/: CMakeLists.txt  eelib.cpp  testee.cpp
regex/: CMakeLists.txt  atom_search.cpp  prefix_search.cpp  regex_search.cpp  trigram.cpp
rocksdb_test/: README.txt  reader.cc  writer.cc
shmem/: ShmemMap.h  shmem.cpp
shmemqueue/: CMakeLists.txt  ShmemQueue.h  reader.cpp  writer.cpp
simd/: aos_to_soa.cpp  firstprog.cpp  shuffle.cpp  strcmp.cpp  vec_cmp.c
string/: FirstNonRepeating.cpp  SearchCompressed.cpp
synopsis/: README.md  compare_three.csv  countdistinct_bitpattern  fm_sketch.cpp  haar.cpp  hyperloglog.cpp  karp_shenker_heavy_hitter.cpp  murmur_1_1000.txt
throttling/: IntervalThrottler.h  IntervalThrottlerTest.cpp  README.md  ThrottlerMain.cpp  rocksdb_rate_limiter.cc
timers/: difftime.c
tree/: Trie.cpp  rabbit.cpp  templ_tree.cpp
trending_topics/: trending.py
virtualization/: vmtouch.c
zookeeper/: .gitignore  locker.c
zootr/: CMakeLists.txt  README.md  locker.c
(+317 files in other folders)
